agrego test con timeline de tiempo y fix config de tauri